--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed black;
+  /* border: 1px dashed black; */
 
   padding: 20px;
   position: absolute;
